--- a/wp-content/themes/desvert/style.css
+++ b/wp-content/themes/desvert/style.css
@@ -987,6 +987,17 @@ textarea {
 	font-weight: 300;
 	margin-bottom: 10px;
 }
+.breadcrumbs{
+    text-decoration: none;
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 300;
+    text-transform: lowercase;
+}
+.breadcrumbs a{
+    text-decoration: none;
+    color: #000000;
+}
 .tagline-contents h1 {
     font-weight: 300;
     font-size: 72px;
@@ -1673,12 +1684,18 @@ body::-webkit-scrollbar-thumb {
     line-height: 35px;
     color: #474747;
     margin-bottom: 28px;
-	transition: all linear.5s;
+    transition: all linear.5s;
+    position: relative;
+    padding-left: 20px;
 }
 .footer-navigation ul li a svg {
     font-size: 14px;
     color: #00000080;
     margin-right: 6px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
 }
 .footer-navigation ul li a:hover{
 	color: #000000;
@@ -1713,6 +1730,393 @@ body::-webkit-scrollbar-thumb {
 }
 /* End DesVert Footer Style */
 
+/*=============== About Page Design Start ===============*/
+#about-section {
+    padding: 60px 0 150px 0;
+}
+.about-text-wrapper {
+    padding-right: 50px;
+}
+.about-text-wrapper .section-title {
+    margin-bottom: 25px;
+}
+.about-text-wrapper p,
+.team-text p {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    color: #757575;
+    margin-bottom: 0;
+}
+.about-text-wrapper .quote {
+    font-weight: 400;
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+.about-right-wrap .img img {
+    border-radius: 5px;
+    filter: saturate(0);
+    width: 320px;
+}
+.ceo-info {
+    max-width: 330px;
+    width: 100%;
+    background: #1d2633;
+    padding: 60px 100px 60px;
+    padding-right: 0;
+    border-radius: 7px;
+    margin-top: -380px;
+    margin-left: 230px;
+}
+.ceo-info .icons svg {
+    color: #fff;
+    font-size: 50px;
+}
+.ceo-quote p {
+    font-family: 'Heebo', sans-serif;
+    font-weight: 300;
+    text-transform: lowercase;
+    color: #fff;
+    text-align: center;
+    font-size: 21px;
+    line-height: 35px;
+}
+.icons {
+    text-align: center;
+    margin-bottom: 18px;
+}
+.about-counter .counter {
+    font-size: 50px;
+    line-height: 50px;
+    text-align: left;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+.about-counter {
+    padding-top: 40px;
+}
+.about-counter .counter-text h4 {
+    font-weight: 400;
+}
+.nav-button {
+    margin: 0;
+    border-top: 1px solid #e0e0e0;
+    margin-top: 40px;
+}
+.nav-button li {
+    width: 50%;
+    text-align: left;
+    padding-top: 23px;
+    padding-bottom: 21px;
+    border-left: 1px solid #e0e0e0;
+    padding-left: 40px;
+}
+.nav-button li:first-child {
+    padding-left: 0;
+    border-left: 0;
+}
+.nav-button li a {
+    text-decoration: none;
+    font-family: 'Heebo', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 24px;
+    color: #181818;
+    text-transform: lowercase;
+}
+.nav-button li a svg{
+    color: #D1D1D1;
+    margin-right: 8px;
+    font-size: 20px;
+}
+/*=============== About Why Choose ===============*/
+#about-why-choose, 
+#about-dream-work {
+    padding: 50px 0 150px 0;
+}
+.inner-block {
+    padding: 40px 0;
+    border-bottom: 1px solid #d1d1d1b5;
+}
+.inner-block:last-child{
+    border-bottom: 0;
+}
+.inner-column {
+    display: block;
+}
+.title-column {
+    border-right: 1px solid #d1d1d1b5;
+}
+.content-column {
+    padding-left: 50px;
+}
+.icon-box, .title-box {
+    display: table-cell;
+    vertical-align: middle;
+}
+.inner-column .title-box {
+    padding-left: 30px;
+}
+.inner-column .title-box h3 {
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 36px;
+}
+.inner-column .icon-box svg {
+    font-size: 52px;
+    color: #D1D1D1;
+}
+.inner-column .text, .inner-column .text p {
+    font-weight: 200;
+    font-size: 18px;
+    line-height: 26px;
+    color: #757575;
+    margin-bottom: 0;
+    font-family: 'Heebo', sans-serif;
+}
+/*=============== About Why Choose ===============*/
+/*=============== About team ===============*/
+#team-section {
+    padding-bottom: 100px;
+}
+.single-team-member {
+    position: relative;
+    display: block;
+    margin-bottom: 40px;
+    transition: all 500ms ease;
+}
+.img-holder {
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+.single-team-member .img-holder img {
+    width: 100%;
+    transform: scale(1.0);
+    transition: all 700ms ease;
+    filter: saturate(0);
+}
+.single-team-member .img-holder:hover img{
+    transform: scale(1.1);
+    filter: saturate(1);
+}
+.single-team-member .share-box {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.single-team-member .share-box ul {
+    position: absolute;
+    left: -48px;
+    bottom: 46px;
+    width: 70px;
+    background: #ffffff;
+    padding: 23px 0;
+    opacity: 0;
+    transform: scaleY(0);
+    transform-style: preserve-3d;
+    transform-origin: bottom;
+    transition: all 900ms ease 300ms;
+    border-bottom: 1px solid #d1d1d1;
+}
+.single-team-member .share-box a {
+    position: relative;
+    display: block;
+}
+.single-team-member .share-box a {
+    position: relative;
+    display: block;
+    width: 70px;
+    height: 70px;
+    background: #ffffff;
+    color: #a5a5a5;
+    font-size: 25px;
+    line-height: 70px;
+    text-align: center;
+    transition: all 900ms ease;
+}
+.single-team-member .share-box:hover > a {
+    color: #000;
+}
+.single-team-member .share-box ul li {
+    display: block;
+    float: none;
+}
+.single-team-member .share-box ul li a {
+    position: relative;
+    display: block;
+    width: 70px;
+    height: 35px;
+    text-align: center;
+    color: #a5a5a5;
+    font-size: 16px;
+    line-height: 35px;
+    transition: all 500ms ease;
+}
+.single-team-member .share-box ul li a:hover {
+    color: #000;
+}
+.single-team-member .name {
+    position: relative;
+    display: block;
+    background: #ffffff;
+    padding: 23px 0 25px;
+    -webkit-box-shadow: 0px 5px 5px 2px rgb(244 244 244 / 80%);
+    box-shadow: 0px 5px 5px 2px rgb(244 244 244 / 80%);
+    transition: all 200ms linear;
+    transition-delay: 0.1s;
+}
+.single-team-member .name a {
+    text-decoration: none;
+}
+.single-team-member .name p {
+    color: #808080;
+    font-size: 15px;
+    line-height: 20px;
+    margin: 0;
+}
+.single-team-member .share-box:hover ul {
+    opacity: 1;
+    transform: scaleY(1);
+    transition: all 900ms ease 300ms;
+}
+.team-more-button .common-btn{
+    border: 1px solid #7C7C7C;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 24px;
+    color: #fff !important;
+    padding: 18px 30px;
+    border-radius: 0;
+    transition: all linear.3s;
+    padding-bottom: 20px;
+    background: #7C7C7C;
+}
+.team-more-button .common-btn:hover{
+    background: transparent;
+    color: #7C7C7C !important;
+}
+/*=============== About team ===============*/
+/*=============== About Work ===============*/
+.single-work-box-wrap {
+    padding: 45px 35px 41px;
+    box-shadow: 0 0 10px #3333331a;
+    background: #1d2633;
+    position: relative;
+}
+.single-work-box-wrap::before {
+    content: "";
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    background: #1d2633;
+    top: 0px;
+    right: 0px;
+    z-index: -1;
+    transition: all linear.3s;
+}
+.single-work-box-wrap:hover::before{
+    top: -5px;
+    right: -5px;
+}
+.single-work-box-wrap::after {
+    content: "";
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    background: #1d2633;
+    left: 0px;
+    bottom: 0px;
+    z-index: -1;
+    transition: all linear.3s;
+}
+.single-work-box-wrap:hover::after{
+    left: -5px;
+    bottom: -5px;
+}
+.single-work-box-wrap .workIcon {
+    font-size: 55px;
+    margin-bottom: 30px;
+    color: #FFFFFF;
+    z-index: 555;
+}
+.single-work-box-wrap .workText{
+    transition: all linear.3s;
+}
+.single-work-box-wrap:hover .workText{
+    opacity: 0;
+}
+.single-work-box-wrap .workText h3 {
+    font-size: 24px;
+    line-height: 30px;
+    color: #ffffff;
+    z-index: 555;
+}
+.single-work-box-wrap .work-total-number .number {
+    font-size: 40px;
+    font-weight: 700;
+    color: #FFFFFF;
+    z-index: 555;
+}
+.single-work-box-wrap .work-total-number {
+    text-align: end;
+    position: relative;
+    margin-top: -60px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: all linear.3s;
+    z-index: 555;
+}
+.single-work-box-wrap .work-total-number::before {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 40%;
+    background: #FFFFFF;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+.single-work-box-wrap:hover .work-total-number{
+    transform: scaleX(1);
+}
+/*=============== About Work ===============*/
+/*=============== About Page Design End ===============*/
+/*==================Services Single Start===================*/
+.services-thumbnail .post-thumbnail img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+.desvert_services-content p {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    color: #757575;
+    margin-bottom: 10px;
+}
+.services-post-wrap {
+    padding: 15px !important;
+    box-shadow: 0 0 10px #5555551a !important;
+    margin: 0 !important;
+}
+.services-post-wrap p{
+    margin-bottom: 15px !important;
+}
+.services-post-wrap::after {
+    height: 3px !important;
+}
+.services-post-content a {
+    padding: 0;
+    text-decoration: none;
+    font-family: 'Heebo', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: #181818;
+    text-transform: lowercase;
+}
+/*==================Services Single End===================*/
 /*============Responsive Area Start=============*/
 @media only screen and (max-width: 768px){
     .site-header {
@@ -1745,6 +2149,12 @@ body::-webkit-scrollbar-thumb {
     .tagline-contents h3 {
         font-size: 24px;
         line-height: 24px;
+    }
+    .breadcrumbs{
+        text-decoration: none !important;
+        font-size: 24px !important;
+        line-height: 24px !important;
+        text-transform: lowercase !important;
     }
     #desvert-tagline {
         padding: 172px 40px 150px 250px;
